<resources>
    <string name="app_name" translatable="false">ProjetDevMobile</string>
    <string name="signin">Se connecter</string>
    <string name="back">Retour</string>
    <string name="id_yourself">Identifiez-vous</string>
    <string name="forgot_pwd">Mot de passe oublié ?</string>
    <string name="or">OU</string>
    <string name="pwd">Mot de passe</string>
    <string name="email">Email</string>
    <string name="login">S\'inscrire</string>
    <string name="signup">Inscrivez-vous</string>
    <string name="firstname">Nom</string>
    <string name="phone">Téléphone</string>
    <string name="name">Prénom</string>
    <string name="new_on_app">Nouveau sur PowerHome ? Créer un compte</string>
    <string name="pwrhme_description">PowerHome est une appli mobile pour les habitants de résidences partagées, qui aide à gérer et limiter leur consommation d’énergie. Un système de points verts motive des habitudes durables et prévient les surconsommations.</string>
    <string name="dev_by">Développé par :\n • Aron DESCARPENTRIES\n • Damon Ba\n • Juliette Cournon\n</string>
    <string name="project_context">Projet réalisé dans le cadre de la ressource de développement mobile de l\'IUT Paris Rives de Seine - 2025</string>
    <string name="already_on_pwrhme">Déjà sur PowerHome ? Se connecter</string>
    <string name="save_edits">Enregistrer les modifications</string>
    <string name="add_stuff">Ajouter un équipement</string>
    <string name="my_stuff">Mes équipements</string>
    <string name="space">Superficie</string>
    <string name="floor">Etage</string>
    <string name="my_home">Mon habitat</string>
    <string name="home_list">Liste des habitats</string>
    <string name="calendar">Calendrier</string>
    <string name="infos">En savoir plus</string>
    <string name="profil">Profil</string>
    <string name="more_work">Avec plus de temps nous aurions aimé ajouté une visualisation des consommations sous formes de courbes/graphiques accédable depuis le menu.\n</string>
    <string name="more_work_label">Avec plus de temps...</string>
</resources>