<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/profil"
            android:title="@string/profil"/>

        <item
            android:id="@+id/nav_mon_habitat"
            android:icon="@drawable/house"
            android:title="@string/my_home"/>

        <item
            android:id="@+id/nav_habitats"
            android:icon="@drawable/appartement"
            android:title="@string/home_list"/>

        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/calendar"
            android:title="@string/calendar"/>

        <item
            android:id="@+id/nav_en_savoir_plus"
            android:icon="@drawable/help"
            android:title="@string/infos"/>
</menu>