<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrnd_pwrhme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/black"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="En Savoir Plus"
            app:navigationIcon="@drawable/menu" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/text_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pwrhme_description"
                android:textSize="20dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text_developers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_by"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/silver"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/text_watermark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_context"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/text_more_work_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_work_label"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/silver"
                android:gravity="center"
                android:layout_marginTop="85dp" />

            <TextView
                android:id="@+id/text_more_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_work"
                android:textSize="20dp"
                android:textStyle="italic"
                android:textColor="@color/silver"
                android:gravity="center"
                android:layout_marginTop="70dp" />
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_header"
        android:background="@color/silver"/>
</androidx.drawerlayout.widget.DrawerLayout>
